<?xml version="1.0" encoding="utf-8"?>
<resources>

    <!-- About Us Activity -->
    <string name="about_us_activity">Acerca de</string>
    <string name="autores_text">Autores:</string>
    <string name="neiber_text">Neiber Padierna Pérez</string>
    <string name="yefry_text">Yefry Alexis Calderón Yepes</string>
    <string name="couse_name_text">Curso:</string>
    <string name="computacion_movil_text">Computación Móvil</string>
    <string name="university_name_text">Universidad de Antioquia</string>
    <string name="medellin_text">Medellín</string>
    <string name="year_text">2014</string>

    <!-- Application Global Strings -->
    <string name="application_name">Ejemplo SQLite</string>
    <string name="clean_text">Limpiar</string>
    <string name="positive_button_text">Aceptar</string>

    <!-- Dashboard Activity -->
    <string name="about_us_menu">Acerca de</string>
    <string name="find_all_persons_menu">Buscar Todas</string>
    <string name="find_person_by_document_type_menu">Buscar por Tipo de Documento</string>
    <string name="find_person_by_height_range_menu">Buscar por Rango de Altura</string>
    <string name="create_person_button_text">CREATE</string>
    <string name="delete_person_button_text">DELETE</string>
    <string name="retrieve_person_button_text">RETRIEVE</string>
    <string name="update_person_button_text">UPDATE</string>

    <!-- Person Creator Activity -->
    <string name="person_creator_text_dialog">La Persona fue guardada exitosamente en la Base de Datos.</string>
    <string name="person_creator_title_dialog">Guardado Exitoso</string>
    <string name="calendar_content_description_image_view">Imagen para ejecutar el evento de mostrar un Calendario.</string>
    <string name="document_type_text_view">Tipo Documento:</string>
    <string name="document_number_text_view">Número Documento:</string>
    <string name="first_names_text_view">Nombres:</string>
    <string name="last_names_text_view">Apellidos:</string>
    <string name="e_mail_text_view">E-mail:</string>
    <string name="birthday_text_view">Fecha Nacimiento:</string>
    <string name="bithday_button">fecha nacimiento</string>
    <string name="person_creator_activity_title">Crear Nueva Persona</string>
    <string name="phone_number_text_view">Teléfono:</string>
    <string name="height_text_view">Altura:</string>
    <string name="weight_text_view">Peso:</string>

    <!-- Person Deleter Activity -->
    <string name="person_deleter_text_dialog">Cantidad de Personas borradas exitosamente:</string>
    <string name="person_deleter_title_dialog">Borrados Exitosos</string>
    <string name="person_deleter_activity_title">Borrar Persona</string>

    <!-- Person Document Type Finder Activity -->
    <string name="document_type_dialog_text_view">Por favor, seleccione un Tipo de Documento de la lista inferior:</string>
    <string name="person_document_type_activity_title">Buscar Por Tipo De Documento</string>

    <!-- Person Expandable List Activity -->
    <string name="person_exampdable_list_activity_title">Listado de Personas</string>
    <string name="empty_persons_list_text_view">Sin datos de Personas . . .</string>

    <!-- Person Finder Layout -->
    <string name="person_finder_layout_text_view">Por favor, especifique los siguientes valores para realizar la búsqueda:</string>
    <string name="person_finder_layout_id_number_hint_edit_text">Número de Identificación</string>

    <!-- Person Height Range Finder Activity -->
    <string name="bad_range_text_alert_dialog">El rango especificado no cumple los criterios.</string>
    <string name="bad_range_title_alert_dialog">Mal Rango</string>
    <string name="height_range_dialog_text_view">Por favor, seleccione el Rango de Altura en el cual desea realizar la búsqueda:</string>
    <string name="lower_height_range_text_view">Rango inferior:</string>
    <string name="person_height_range_finder_activity_title">Buscar Por Rango de Altura</string>
    <string name="upper_height_range_text_view">Rango superior:</string>

    <!-- Person List Item -->
    <string name="person_birthday_title">Nacimiento:</string>
    <string name="person_e_mail_title">E-Mail:</string>
    <string name="person_phone_number_title">Teléfono:</string>
    <string name="person_height_title">Altura [m]:</string>
    <string name="person_weight_title">Peso [Kg]:</string>
    <string name="accept_text">Aceptar</string>
    <string name="cancel_text">Cancelar</string>
    <string name="date_selected_text"></string>

    <!-- Person Retriever Activity -->
    <string name="person_retriever_activity_title">Buscar Persona</string>
    
    <!-- Person Update Activity -->
    <string name="update_successful_text">Actualizado Exitosamente</string>
    <string name="successful_update_information_tittle">La persona fue actualizada exitosamente en la Base de Datos</string>
    <string name="update_information_activity_title">Actualizar Información</string>
    <string name="fail_update_person_title_text">Error</string>
    <string name="fail_update_person_message_text">El usuario no existe en la Base de Datos</string>

</resources>