<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".activity.person.find.PersonDocumentTypeFinderActivity" >

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/height_range_dialog_text_view"
        android:textAppearance="?android:attr/textAppearanceMedium" >
    </TextView>

    <TableLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <TableRow
            android:layout_width="fill_parent"
            android:orientation="horizontal"
            android:layout_height="wrap_content" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/lower_height_range_text_view"
                android:textAppearance="?android:attr/textAppearanceMedium" >
            </TextView>

            <Spinner
                android:id="@+id/lower_age_range_spinner"
                android:layout_width="0dip"
                android:layout_height="wrap_content"
                android:layout_weight="1" >
            </Spinner>
        </TableRow>

        <TableRow
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/upper_height_range_text_view"
                android:textAppearance="?android:attr/textAppearanceMedium" >
            </TextView>

            <Spinner
                android:id="@+id/upper_age_range_spinner"
                android:layout_width="0dip"
                android:layout_height="wrap_content"
                android:layout_weight="1" >
            </Spinner>
        </TableRow>
    </TableLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <Button
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:onClick="onCancelFinder"
            android:text="@string/cancel_text" >
        </Button>

        <Button
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:onClick="onStartFinder"
            android:text="@string/accept_text" >
        </Button>
    </LinearLayout>

</LinearLayout>