<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".activity.dashboard.DashboardMainActivity" >

    <TableRow
        android:layout_width="fill_parent"
        android:layout_weight="2" >

        <Button
            android:id="@+id/create_person_button"
            style="@style/dashboard_button_style"
            android:layout_width="fill_parent"
            android:layout_height="@dimen/dashboard_button_height"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:drawableTop="@drawable/ic_launcher"
            android:onClick="onCreatePerson"
            android:text="@string/create_person_button_text" >
        </Button>

        <Button
            android:id="@+id/retrieve_person_button"
            style="@style/dashboard_button_style"
            android:layout_width="fill_parent"
            android:layout_height="@dimen/dashboard_button_height"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:drawableTop="@drawable/ic_launcher"
            android:onClick="onRetrievePerson"
            android:text="@string/retrieve_person_button_text" >
        </Button>
    </TableRow>

    <TableRow
        android:layout_width="fill_parent"
        android:layout_weight="2" >

        <Button
            android:id="@+id/update_person_button"
            style="@style/dashboard_button_style"
            android:layout_width="fill_parent"
            android:layout_height="@dimen/dashboard_button_height"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:drawableTop="@drawable/ic_launcher"
            android:onClick="onUpdatePerson"
            android:text="@string/update_person_button_text" >
        </Button>

        <Button
            android:id="@+id/delete_person_button"
            style="@style/dashboard_button_style"
            android:layout_width="fill_parent"
            android:layout_height="@dimen/dashboard_button_height"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:drawableTop="@drawable/ic_launcher"
            android:onClick="onDeletePerson"
            android:text="@string/delete_person_button_text" >
        </Button>
    </TableRow>

</TableLayout>